# kiro-cli-auth

./: AGENTS.md  Cargo.toml  README.md  install.bat  install.ps1  install.sh
.github/workflows/: release.yml  test-install-script.yml
src/: main.rs  ui.rs
src/cli/: mod.rs
src/core/: cache.rs  config.rs  machine_id.rs  mod.rs  models.rs
src/core/auth/: api.rs  mod.rs  token.rs
src/core/commands/: current.rs  display.rs  list.rs  login.rs  mod.rs  mod_old.rs  remove.rs  self_update.rs  switch.rs  utils.rs
src/core/data/: db.rs  migration.rs  mod.rs
src/core/fs/: mod.rs  paths.rs
src/core/transfer/: exporter.rs  importer.rs  mod.rs  updater.rs
tests/: import_export_test.rs  integration_test.rs  test_helper.sh
