[package]
name = "kiro-cli-auth"
# Version is overridden by CI during release builds
version = "0.0.0-dev"
edition = "2021"

[lib]
name = "kiro_cli_auth"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2.10", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
inquire = "0.7"
rayon = "1.10"
fs2 = "0.4"
indicatif = "0.17"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"
